# envhub

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  demo.yml  devbox.json  flake.nix  install.sh
.fluentci/src/dagger/: index.ts  jobs.ts
.github/: FUNDING.yml
.github/workflows/: build.yml  ci.yml  flakehub-publish-tagged.yml  release-for-mac.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  helpers.rs  main.rs
crates/cli/src/cmd/: env.rs  file.rs  init.rs  mod.rs  package.rs  status.rs  unuse.rs  use.rs
crates/ext/: Cargo.toml
crates/ext/src/: lib.rs  rtx.rs  rustup.rs
crates/hm/: Cargo.toml
crates/hm/src/: init.rs  lib.rs  nix.rs  reset.rs  switch.rs
crates/pkgs/: Cargo.toml
crates/pkgs/src/: devbox.rs  homebrew.rs  lib.rs  nix.rs  pkgx.rs
crates/providers/: Cargo.toml
crates/providers/src/: github.rs  lib.rs  local.rs  s3.rs
crates/stow/: Cargo.toml
crates/stow/src/: install.rs  lib.rs  stow.rs  unstow.rs
crates/types/: Cargo.toml
crates/types/src/: configuration.rs
demo/: README.md  envhub.hcl
demo/dotfiles/: .bashrc.backup
examples/brew/: envhub.hcl
examples/brew/dotfiles/: .screenrc
examples/devbox/: envhub.hcl
examples/pkgx/: envhub.hcl
examples/rtx/: envhub.hcl
examples/rustup/: envhub.hcl
