[package]
authors = ["Tsiry Sandratraina <tsiry.sndr@fluentci.io>"]
categories = ["command-line-utilities"]
description = "Manage your dotfiles and packages with ease."
edition = "2021"
keywords = ["nix", "shell", "environment", "dotfiles"]
license = "MIT"
name = "envhub-types"
repository = "https://github.com/tsirysndr/envhub"
version = "0.2.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hcl-rs = "0.14.2"
indexmap = {version = "1.9.3", features = ["serde"]}
serde = "1.0.163"
